--- a/CRANE_X7_JS/index.html
+++ b/CRANE_X7_JS/index.html
@@ -33,6 +33,7 @@
 		<script src="js/color_select.js"></script>
 		<script src="js/range_rot.js"></script>
 		<script src="js/slot_list.js"></script>
+		<script src="js/send_fig.js"></script>
 		<script src="client.js"></script>
 	</body>
 </html>
