change install package

--- a/CRANE_X7_JS/index.html
+++ b/CRANE_X7_JS/index.html
@@ -34,10 +34,10 @@
     <body ontouchstart="">
         <!-- Copyright three.js : https://raw.githubusercontent.com/mrdoob/three.js/dev/LICENSE -->
         <script type = "text/javascript" src = "/socket.io/socket.io.js"></script>
-        <script src="js/three.min.js"></script>
-        <script src="js/OrbitControls.js"></script>
+        <script src="node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="node_modules/three/build/three.min.js"></script>
+        <script src="node_modules/three/examples/js/controls/OrbitControls.js"></script>
         <script src="js/app.js?ver=201802012200"></script>
-        <script src = "https://code.jquery.com/jquery-1.11.1.js"></script>
         <!-- <script src="js/form.js?ver=201801241700"></script> -->
         <!-- <script src="js/form.js?ver=201802012200"></script> -->
         <!-- <script src="js/form.js?ver=201802021000"></script> -->
